GNOME Bugzilla – Bug 780449
File conflict dialog: <ENTER> does not confirm when renaming a file
Last modified: 2017-08-21 09:22:49 UTC
Overview: <ENTER> does not confirm the file-conflict-dialog when renaming a file. Steps to Reproduce: 1) Copy any file (Ctrl+C). 2) Go into another directory. 3) Paste the copied file (Ctrl+V). 4) Paste the copied file again (Ctrl+V), which causes the file conflict dialog to open. 5) Open the expander "Select a new name for the destination". 6) Type a new filename into the GtkEntry (a.k.a. text field). 7) Press <ENTER>. Actual result: Step 7 (see above) does nothing. Expected result: Step 7 will trigger (press/click) the "confirm"-button of the dialog (which then closes the dialog and renames the file). Additional informations: The GtkEntry gets created in "src/nautilus-file-conflict-dialog.c" line 351 ff.
Created attachment 348583 [details] Bugfix In all other places we can save/rename files with ENTER, so why not fixing it?
Created attachment 348584 [details] [review] Bugfix (as patch) Sry, forget to press "patch" checkbox
Review of attachment 348584 [details] [review]: Hey thanks for the patch. You can actually use “activates-default” and is much straightforward.
Created attachment 349221 [details] [review] Bugfix Bugfix with activates-default P.S. Sorry for the long delay, I could not use my home PC for a few days.
Review of attachment 349221 [details] [review]: Much better code now! The commit message is still lacking. See https://wiki.gnome.org/Newcomers/CodeContributionWorkflow#Commit_guidelines
Created attachment 349238 [details] [review] Bugfix Added patch description
Review of attachment 349238 [details] [review]: The commit message looks good, but somewhere along the way you broke the patch itself. :/ ::: src/nautilus-file-conflict-dialog.c @@ +302,3 @@ g_signal_connect (widget, "changed", G_CALLBACK (entry_text_changed_cb), dialog); + gtk_entry_set_activated (GTK_ENTRY (widget), TRUE); This isn’t in the API.
Created attachment 349745 [details] Patch version over 9000 Really sorry, I can't remember how I was able to break my code... Fixed now.
Created attachment 349746 [details] [review] Patch version over 9001 Patch
Review of attachment 349746 [details] [review]: Ah, sorry, I missed the subject line. It should have the modified file in it (as you know from your other patches). Everything else is great.
Attachment 349746 [details] pushed as 941b3fe - file-conflict-dialog: confirm filename change with return key
*** Bug 751139 has been marked as a duplicate of this bug. ***