file-conflict-dialog: confirm filename change with return key

The problem is that when we have a file conflict dialog, we can write
a new name for the file in GtkEntry in the expander "Select a new
name for the destination", but after typing in a new file name,
pressing <ENTER> does nothing, but should close this dialog and
confirm the renaming.

To fix this we enable "activates-default" flag for the GtkEntry.

https://bugzilla.gnome.org/show_bug.cgi?id=780449